--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,11 @@
-<% places = Place.all %>
-
 <h1> Places I've been </h1>
 
 <ul>
-    <% for place in places %>
-        <li><%= place["name"] %></li>
+    <% for place in @places %>
+        <li>
+        <a href="/places/<%= place["id"] %>"><%= place["name"] %></a>
+        </li>
     <% end %>
 </ul>
 
-<ul> New Place </ul>
+<p><a href="/places/new">New place</a></p>
