--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -16,4 +16,8 @@
   <% end %>
 </ul>
 
+<p>
+  <%= button_to "Delete this place", @place, :method => "delete" %>
+</p>
+
 <p><a href="/places">Back to all places</a></p>
