--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -20,4 +20,8 @@
   <%= button_to "Delete this place", @place, :method => "delete" %>
 </p>
 
+<p>
+  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
+</p>
+
 <p><a href="/places">Back to all places</a></p>
