--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,18 +1,12 @@
 <h1><%= @place["name"] %></h1>
 
-<h3>Posts</h3>
+<h2>Posts</h2>
 
 <ul>
   <% for post in @posts %>
-    <li>
-        <%= post["title"] %>
-    </li>
-    <li>
-        <%= post["posted_on"] %>
-    </li>
-    <li>
-        <%= post["description"] %>
-    </li>
+      <h4><%= post["title"] %></h4>
+        <li><%= post["posted_on"] %></li>
+        <li><%= post["description"] %></li>
   <% end %>
 </ul>
 
